[package]
name = "voom-policy-evaluator"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Policy evaluation plugin for VOOM — applies compiled policies to media files"

[dependencies]
voom-domain = { workspace = true }
voom-dsl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
voom-dsl = { workspace = true }
voom-domain = { workspace = true, features = ["testing"] }
