[package]
name = "voom-sqlite-store"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite storage plugin for VOOM — persistent media file and job database"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = "=0.7.0"
insta = { workspace = true }
tempfile = { workspace = true }
voom-domain = { workspace = true, features = ["testing"] }

[[bench]]
name = "verification_due"
harness = false
