[package]
name = "voom-tool-detector"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
