[package]
name = "voom-tool-detector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Tool detection plugin for VOOM — finds and verifies external tool availability"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
