[package]
name = "voom-verifier"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Media file integrity verification plugin for VOOM"

[dependencies]
voom-domain = { workspace = true }
voom-kernel = { workspace = true }
voom-process = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
voom-domain = { workspace = true, features = ["testing"] }
tempfile = { workspace = true }
