[package]
name = "voom-web-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Web server plugin for VOOM — REST API and web dashboard"

[dependencies]
voom-domain.workspace = true
voom-dsl.workspace = true
voom-kernel.workspace = true

# Web framework
axum = { version = "0.7", features = ["tokio", "json"] }
tower = { version = "0.5", features = ["util", "limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "fs", "set-header", "trace"] }

# Templates
tera = "1"

# Async
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# DateTime & IDs
chrono.workspace = true
uuid.workspace = true

# Security
subtle = "2"

# Errors & logging
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
voom-domain = { workspace = true, features = ["testing"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
axum-test = "16"
