[package]
name = "voom-web-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Web server library for VOOM — REST API and web dashboard"

[dependencies]
voom-domain.workspace = true
voom-dsl.workspace = true
voom-report.workspace = true

# Web framework
axum = { version = "=0.7.9", features = ["tokio", "json"] }
tower = { version = "=0.5.3", features = ["util", "limit", "timeout"] }

# Templates
tera = "1"

# Async
tokio.workspace = true
tokio-stream.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# DateTime & IDs
chrono.workspace = true
uuid.workspace = true

# Security
subtle = "2"

# Rate limiting
governor = { workspace = true }

# File locking (used by delete_file handler to acquire the process lock)
fs2 = { workspace = true }
anyhow.workspace = true

# Errors & logging
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
voom-domain = { workspace = true, features = ["testing"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
axum-test = "16"
