[package]
name = "example-metadata"
version = "0.1.0"
edition = "2021"
description = "Example VOOM WASM plugin demonstrating metadata enrichment"

[lib]
crate-type = ["cdylib"]

[dependencies]
voom-plugin-sdk = { path = "../../crates/voom-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
