[package]
name = "handbrake-executor"
version = "0.1.0"
edition = "2024"
description = "VOOM WASM plugin for video transcoding via HandBrakeCLI (uses host tool runner)"

[lib]
crate-type = ["cdylib"]

[dependencies]
voom-plugin-sdk = { path = "../../crates/voom-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# wit-bindgen would be added here for actual WASM compilation:
# wit-bindgen = "0.39"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
