[package]
name = "subtitle-generator"
version = "0.1.0"
edition = "2021"
description = "VOOM WASM plugin for generating forced subtitle files from multi-language transcripts"

[lib]
crate-type = ["cdylib"]

[dependencies]
voom-plugin-sdk = { path = "../../crates/voom-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
